Fixed nav image issue and spacing inside infoBoxes

--- a/scss/_info_box.scss
+++ b/scss/_info_box.scss
@@ -14,7 +14,7 @@
     border-radius: 8px;
     z-index: 2;
     background-color: white;
-    box-shadow: 3px 1px 10px 2px rgba(0,0,0, 0.7);
+    box-shadow: 3px 1px 10px 2px rgba(0,0,0, 0.5);
     
     @include tablet {
         width: 600px;
@@ -99,13 +99,14 @@
 
     &__row {
         height: 35%;
-        margin: 1% 0;
+        margin: 3% 0;
         padding: 1.5%;
         @include flex(center, center);
         flex-direction: column;
         @include tablet {
             flex-direction: row;
             padding: 0;
+            margin: 1% 0;
         }
         
         img {
@@ -116,7 +117,7 @@
     &__match {
         width: 100%;
         height: 48%;
-        margin: 5px 0;
+        margin: 3px 0;
         padding: 3px;
         border-radius: 8px;
         border: .5px solid black;
@@ -159,26 +160,35 @@
     &__details {
         height: 46%;
         width: 100%;
-        @include flex(center, center);
+        @include flex(flex-start, center);
         flex-direction: column;
         @include tablet {
             flex-direction: row;
+            justify-content: center;
         }
         
         &--video {
-            height: 70%;
+            // height: 70%;
+            height: auto;
             width: 100%;
-            margin: 5px;
-            @include flex(center, center);
+            // margin: 5px;
+            margin-bottom: 3%;
+            @include flex(center, flex-start);
             @include tablet {
                 height: 100%;
                 width: 50%;
+                align-items: center;
                 margin: 0;
             }
             
             img, a {
-                height: 100%;
+                max-height: 100%;
+                min-width: 100%;
                 cursor: pointer;
+                @include tablet {
+                    height: 100%;
+                    min-width: auto;
+                }
             }
             
         }
@@ -218,7 +228,11 @@
     grid-template-columns: 1fr 2fr 1fr;
     justify-items: center;
     
-    p {grid-column: span 1;}
+    p {
+        grid-column: span 1;
+        margin: 5px 0;
+    }
+
     
     &__name {grid-column: span 2;}
 }
